# document-scanner

./: .gitignore  .pre-commit-config.yaml  Custom_training_deeplabv3_mbv.ipynb  Document_extraction.ipynb  app.py  create_dataset.py  download_google_images.py  generate_doc_set.py  pyproject.toml  requirements.txt  resizer.py  seg.py  split_dataset.py
