[tool.poetry]
name = "ml-doc-scanner"
version = "0.1.0"
description = ""
authors = ["Justin Vanderhooft <justinvdhooft@gmail.com>"]
readme = "README.md"
packages = [{include = "ml_doc_scanner"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
numpy = "^1.24.0"
opencv-python = "^4.6.0.66"
streamlit = "^1.16.0"
streamlit-drawable-canvas = "^0.9.2"
torch = "^1.13.1"
torchvision = "^0.14.1"

[tool.poetry.group.dev.dependencies]
gdown = "^4.6.0"
google-images-download = "^2.8.0"
jupyterlab = "^3.5.2"
ipywidgets = "^8.0.3"
albumentations = "^1.3.0"
matplotlib = "^3.6.2"
tqdm = "^4.64.1"
torchmetrics = "^0.11.0"
livelossplot = "^0.5.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
