[tool.poetry]
name = "ml-doc-scanner"
version = "0.1.0"
description = ""
authors = ["Justin Vanderhooft <justinvdhooft@gmail.com>"]
readme = "README.md"

[tool.black]
line-length = 88
target-version = ['py39', 'py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # Ignored files/directories
)/
'''

[tool.isort]
profile = "black"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
numpy = "^1.24.0"
opencv-python = "^4.6.0.66"
torch = "^1.13.1"
torchvision = "^0.14.1"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
albumentations = "^1.3.0"
livelossplot = "^0.5.5"
gdown = "^4.6.0"
google-images-download = "^2.8.0"
ipywidgets = "^8.0.3"
isort = "^5.11.3"
jupyterlab = "^3.5.2"
matplotlib = "^3.6.2"
streamlit = "^1.16.0"
streamlit-drawable-canvas = "^0.9.2"
tqdm = "^4.64.1"
torchmetrics = "^0.11.0"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
